# phish-prediction-engine

./: .gitignore  LICENSE  README.md  export_json.py  main.py  optimized_config.json  pyproject.toml  requirements.txt
phish_engine/: __init__.py  clustering.py  features.py  predictor.py  scoring.py  set_builder.py  song_model.py
phish_engine/backtest/: __init__.py  validator.py
phish_engine/data/: __init__.py  manual_overrides.py  mock_data.py  real_data.py  songs.py  venue_map.py
phish_engine/data/cache/: phishin_tracks.json  shows.json  songs.json
scripts/: enrich_data.py  fast_optimize.py  optimize_pipeline.py  rebuild_predictions.py  subparam_optimize.py
tests/: conftest.py  test_clustering.py  test_features.py  test_integration.py  test_predictor.py  test_real_data.py  test_scoring.py  test_standalone_validation.py
