[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phish-prediction-engine"
version = "2.0.0"
description = "ML-powered setlist prediction engine for Phish concerts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "scipy>=1.11.0",
]

[tool.setuptools.packages.find]
include = ["phish_engine*"]
